--- a/home.html
+++ b/home.html
@@ -105,10 +105,10 @@
 
 							<div class="row">
 
-								<form class="sb-form" role="form" id="mailgun">
+								<form class="sb-form" role="form" id="mailgun" method="POST">
 									<div class="form-group">
 										<label class="sr-only" for="email">Email address</label>
-										<input type="email" class="form-control" id="email" placeholder="Enter your email">
+										<input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
 									</div>
 									<button type="submit" class="btn btn-default">Subscribe</button>
 								</form>
@@ -118,6 +118,8 @@
 								var mailgunURL;
 
 								mailgunURL = window.location.protocol + "//" + window.location.hostname + '/mailgun.php';
+
+								console.log(mailgunURL);
 
 								$('#mailgun').on('submit',function(e) {
 								  e.preventDefault();
