--- a/home.html
+++ b/home.html
@@ -21,6 +21,10 @@
 	<link href="assets/css/animate.css" rel="stylesheet" media="screen">
 	<!-- Custom styles CSS -->
 	<link href="assets/css/style.css" rel="stylesheet" media="screen">
+
+	<!-- jQuery -->
+	<script src="assets/js/jquery-1.11.1.min.js"></script>
+
 </head>
 <body>
 
@@ -182,8 +186,6 @@
 	</div><!-- .wrapper -->
 
 	<!-- Javascript files -->
-	<!-- jQuery -->
-	<script src="assets/js/jquery-1.11.1.min.js"></script>
 	<!-- Bootstrap JS -->
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<!-- Countdown -->
@@ -195,8 +197,8 @@
 	<!-- WOW - Reveal Animations When You Scroll -->
 	<script src="assets/js/wow.min.js"></script>
 	<!-- Google Maps -->
-	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="assets/js/gmaps.js"></script>
+	<!-- // <script src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
+	<!-- // <script src="assets/js/gmaps.js"></script> -->
 	<!-- Custom scripts -->
 	<script src="assets/js/custom.js"></script>
 
