--- a/home.html
+++ b/home.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="description" content="Genisys will revolutionalize the way we connect and communicate with each other and the things around us.">
+	<meta name="author" content="Cyberdyne">
+	<meta name="keywords" content="cyberdyne,genisys,iot,chat,skynet">
 
 	<title>Genisys</title>
 
@@ -162,6 +163,6 @@
 	  ga('send', 'pageview');
 
 	</script>
-	
+
 </body>
 </html>
