--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
 
 					<div class="col-md-6 wow slideInLeft animated">
 						<div class="video">
-						  <iframe src="http://player.vimeo.com/video/9221389?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="500" height="281" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+						  <iframe src="https://player.vimeo.com/video/9221389?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="500" height="281" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						</div>
 					</div>
 
